--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -1,56 +1,58 @@
 /*
     estilos da pagina de index.html
 */
-.home{
-    background-color: burlywood;
+.home {
+  background-color: burlywood;
 }
-.contato{
-   background-color: antiquewhite;
+.contato {
+  background-color: antiquewhite;
 }
-.center{
-    text-align: center;
+.center {
+  text-align: center;
 }
-.container{
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
+.container {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
 }
-.justify{
-    text-align: justify;
+.justify {
+  text-align: justify;
 }
 .menu li {
-    display: inline;
-    padding: 15px;
-    font-size: 20px;
+  display: inline;
+  padding: 15px;
+  font-size: 20px;
 }
 .menu li a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
-.menu li a:hover{ /*animação do botão*/
-    color: coral;
+.menu li a:hover {
+  /*animação do botão*/
+  color: coral;
 }
-.borda{
-    padding: 30px;
+.borda {
+  padding: 30px;
 }
 .border {
-    border-radius: 300px;
+  border-radius: 300px;
 }
-.la{/*largura e altura*/
-    width: 500px;
-    height: 500px;
+.la {
+  /*largura e altura*/
+  width: 500px;
+  height: 500px;
 }
 /*
     estilos da pagina contato.html
 */
-.tm-social{
-    width: 50px;
-    height: 50px;
+.tm-social {
+  width: 50px;
+  height: 50px;
 }
-.video{
-    margin-bottom: 50px;
+.video {
+  margin-bottom: 50px;
 }
-.margem{
-    margin-left: 50px;
+.margem {
+  margin-left: 50px;
 }
