--- a/arquivos/css/style.css
+++ b/arquivos/css/style.css
@@ -1,14 +1,12 @@
 /*
     estilos da pagina de index.html
 */
-.home {
-  background-color: burlywood;
-}
-.contato {
-  background-color: antiquewhite;
-}
+
 .center {
   text-align: center;
+}
+.justify {
+  text-align: justify;
 }
 .container {
   display: flex;
@@ -16,32 +14,30 @@
   justify-content: center;
   align-items: center;
 }
-.justify {
-  text-align: justify;
-}
-.menu li {
+
+#menu li {
   display: inline;
   padding: 15px;
-  font-size: 20px;
 }
-.menu li a {
+#menu li a {
   text-decoration: none;
   color: black;
+  font-size: 20px;
 }
-.menu li a:hover {
+#menu li a:hover {
   /*animação do botão*/
-  color: coral;
+  color: grey;
 }
-.borda {
+.p-30 {
   padding: 30px;
 }
-.border {
-  border-radius: 300px;
+.br-50 {
+  border-radius: 50%;
 }
-.la {
+.wh-300 {
   /*largura e altura*/
-  width: 500px;
-  height: 500px;
+  width: 300px;
+  height: 300px;
 }
 /*
     estilos da pagina contato.html
@@ -50,9 +46,9 @@
   width: 50px;
   height: 50px;
 }
-.video {
+.mb-50 {
   margin-bottom: 50px;
 }
-.margem {
+.ml-50 {
   margin-left: 50px;
 }
